<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/header_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/start_server_parent"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/description_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_server"
                android:textColor="@color/description"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_server"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:onClick="startServer"
                android:text="Start Server" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/start_client_parent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/start_server_parent">

            <TextView
                android:id="@+id/description_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_client"
                android:textColor="@color/description"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/start_client_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_client"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:onClick="startClient"
                android:text="Start Client" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_client_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notes :" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_4" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>